--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -49,7 +49,8 @@ body {
 .info {
   background-color: rgb(255, 255, 255);
   max-width: 750px;
-  border-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   z-index: 1;
   margin: auto;
   position: absolute;
