Fix median temperature calculation

--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .app .weather_tab {
-  background: linear-gradient(135deg, #1C4777, #7D8EC6, #539BD5);
+  background: linear-gradient(135deg, #1C4777, #B8C1E0, #539BD5);
 }
 
 .app .map_container {
