--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -95,6 +95,25 @@ body {
   flex: 25%;
 }
 
+/*
+* Style for scrollbars
+*/
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background:rgba(255, 255, 255, 0); 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 /* .map {
   height: 600px; */
   /* The height is 600 pixels */
