--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -50,7 +50,7 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 3;
+  z-index: 4;
   background: linear-gradient(135deg, #1C4777, #B8C1E0, #539BD5);
 }
 
@@ -83,7 +83,7 @@ body {
 }
 
 .bottom_navigation {
-  z-index: 4;
+  z-index: 5;
 }
 
 .root {
@@ -93,6 +93,21 @@ body {
 
 .welcome_view {
   flex: 25%;
+}
+
+.app .login_icon {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+.app .management_view {
+  flex: 1 1 auto;
+  height: 100vh;
+  z-index: 3;
+  overflow-y: scroll;
+  width: 75vw;
+  position: absolute;
+  background-color: white;
 }
 
 /*
