Mobile layout for snowtype information view

--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -134,6 +134,10 @@ body {
     width: 100vw;
   }
 
+  .app .weather_tab {
+    width: 100vw;
+  }
+
   .welcome_view {
     position: absolute;
     top: 0px;
