--- a/src/map-app/src/style.css
+++ b/src/map-app/src/style.css
@@ -43,25 +43,26 @@ body {
 }
 
 .app .weather_tab {
-  flex: 1 1 auto;
-  height: 100vh; /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   overflow-y: scroll;
   width: 75vw;
-  position: absolute;
-  top: 0px;
-  left: 0px;
   z-index: 4;
   background: linear-gradient(135deg, #1C4777, #B8C1E0, #539BD5);
 }
 
 .app .map_container {
-  flex: 1 1 auto;
-  height: 100vh /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
 }
 
 .map {
-  flex: 1 1 auto;
-  height: 100vh; /*calc(100vh - 55px);*/
+  position: fixed;
+  bottom: 0;
+  height: 100%;
+  width: 75vw;
 }
 
 .info {
@@ -77,10 +78,10 @@ body {
 }
 
 .app .snow_tab {
-  flex: 1 1 auto;
-  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   z-index: 4;
-  position: absolute;
   overflow-y: scroll;
   width: 75vw;
   background-color: white;
@@ -94,6 +95,9 @@ body {
 
 .bottom_navigation {
   z-index: 5;
+  position: fixed;
+  bottom: 0;
+  height: 55px;
 }
 
 .root {
@@ -102,8 +106,11 @@ body {
 }
 
 .welcome_view {
-  flex: 25%;
-  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 25vw;
 }
 
 .app .login_icon {
@@ -112,12 +119,12 @@ body {
   right: 5px;
 }
 .app .management_view {
-  flex: 1 1 auto;
-  height: 100vh;
+  position: fixed;
+  bottom: 0;
+  height: 100%;
   z-index: 3;
   overflow-y: scroll;
   width: 75vw;
-  position: absolute;
   background-color: white;
 }
 
@@ -135,6 +142,10 @@ body {
     width: 100vw;
   }
 
+  .map {
+    width: 100vw;
+  }
+
   .app .weather_tab {
     width: 100vw;
   }
@@ -144,7 +155,6 @@ body {
     top: 0px;
     left: 0px;
     width: 100vw;
-    min-height: -webkit-fill-available;
     z-index: 6;
   }
 }
